<resources>
    <string name="app_name">OpenLegendRPG</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Core Rules</item>
        <item>Banes</item>
        <item>Boons</item>
        <item>Feats</item>
        <item>Characters</item>
        <item>Login</item>
        <item>Create Account</item>
    </string-array>
    <string-array name="perks">
        <item>Ageless</item>
        <item>Artisan</item>
        <item>Ascetic</item>
        <item>Attractive</item>
        <item>Brute</item>
        <item>Courageous</item>
        <item>Crowd Favorite</item>
        <item>Disease Immunity</item>

        <item>Divine Agent</item>
        <item>Divine Insight</item>
        <item>Ear of the Emperor</item>
        <item>Extraordinary Presence</item>
        <item>Fugitive</item>
        <item>Idol</item>
        <item>Innocent</item>
        <item>Jack of all Trades</item>

        <item>Legendary Bloodline</item>
        <item>Local Hero</item>
        <item>Lucky</item>
        <item>Merchant</item>
        <item>Natures Ally</item>
        <item>Observant</item>
        <item>Profession</item>
        <item>Pure-Hearted</item>

        <item>Resilient</item>
        <item>Scavenger</item>
        <item>Scent</item>
        <item>Scholar</item>
        <item>Silver Tongue</item>
        <item>Stone Sense</item>
        <item>Street Rat</item>
        <item>Upper Class</item>

        <item>Vagabond</item>
        <item>Warriors Code</item>
        <item>Whisperer to the Wild</item>
    </string-array>
    <string-array name="flaws">
        <item>Absent-Minded</item>
        <item>Addiction</item>
        <item>Ambitions</item>
        <item>BloodLust</item>
        <item>Brash</item>
        <item>Bravado</item>
        <item>Cosmetic Deformity</item>
        <item>Compulsion</item>

        <item>Cowardly</item>
        <item>Dimwitted</item>
        <item>Disabled</item>
        <item>Greedy</item>
        <item>Honest</item>
        <item>Hot Tempered</item>
        <item>Illiterate</item>
        <item>Literal Minded</item>

        <item>Mood Disorder</item>
        <item>Naive</item>
        <item>Overt</item>
        <item>Overweight</item>
        <item>Pacifist</item>
        <item>Phobia</item>
        <item>Proud</item>
        <item>Psychotic</item>

        <item>Short-Winded</item>
        <item>Sick</item>
        <item>Socially Awkward</item>
        <item>Stubborn</item>
        <item>Uncoordinated</item>
        <item>Vengeful</item>
        <item>Zealous</item>
    </string-array>
    <string
        name="OLRPG_logo">Open legend rpg logo
    </string>
    <string
        name="OLRPG_backdrop">Open legend rpg backdrop
    </string>
    <string
        name="description_body1_header">What is Open Legend?
    </string>
    <string
        name="description_body1">Open Legend is a tabletop roleplaying game (or RPG) in which the players play the part of mighty heroes and wicked villains in order to tell stories of epic proportion. In each game of Open Legend, the intrepid characters will fight mythic beasts, break ancient curses, unravel mysterious enigmas, discover treasures untold, and more. Open Legend is a streamlined system designed to let you tell big stories using small rules. The rules get complex when they need to, but never cumbersome, and wherever they could be cut out or simplified, they have been. Some of the highlights at the heart of Open Legend are explained below."
    </string>
    <string
        name="description_body2_header">Unhindered Character Creation
    </string>
    <string
        name="description_body2">With Open Legend, every ability you choose for your character is a new decision. You are never required to choose from a short list, and every character has the potential to access every ability. The story you choose to tell with these abilities and how they manifest, is an opportunity to let your imagination run wild. Select the abilities that match your vision and ignore the ones that don’t. Or, you can get started with one of our quick builds. Either way, the best part is, it is fast and simple but still has lots of potential for intricate and complex characters, if that is what you are looking for. Complex and simple characters can both play a meaningful role in an Open Legend game.
    </string>
    <string
        name="description_body3_header">Banes and Boons
    </string>
    <string
        name="banesAndBoons__description">Open Legend features a collection of banes and boons that any character can use as long as they possess the appropriate attributes. Banes allow you to stun your enemies, set them ablaze, or otherwise hinder them with devastating status effects. Boons are perks that you grant yourself or allies, such as magical healing, damage resistance, and flight. In Open Legend, no fighter is just a walking meat shield with a blade. He’s a trained combatant who can stun, blind, cripple, and hurl his foes across the battlefield. And when a sorceress summons an icy storm from the skies, she decides at the time of casting if she also wants it to slow, knockdown, or immobilize her enemies.
    </string>
    <string
        name="diceWithoutLimit">Dice Without Limit
    </string>
    <string
        name="diceDescription">In Open Legend, dice explode! That means that whenever any die rolls maximum, you get to reroll it and add the new roll to your total, ad infinitum. We love to tell a good story, but rolling dice is just so much fun, we thought that occasionally, you should get to roll a lot of them. The volatile nature of exploding dice makes every roll count, and every session of Open Legend is full of tense moments when the tides can turn at a moment’s notice, for better or worse.
    </string>
    <string
        name="genrePossibility">Any Genre, Endless Possibilities
    </string>
    <string
        name="genrePossibilityDescription">The core rules are written to reflect a high fantasy, sword and sorcery setting, but Open Legend was purposefully designed to be open to any genre. The mechanics of the game focus on effects rather than flavor so that your gaming table can tell whatever kind of story it wants. Struggle for survival in a post-apocalyptic zombie wasteland. Soar amidst the clouds on your crystal-powered airship in a steampunk inspired campaign of swashbuckling sky pirates. Explore an alien-infested space station abandoned at the edge of the universe. The possibilities are endless.
    </string>
    <string
        name="next">Next\n Chapter
    </string>
    <string
        name="table">Table of Contents
    </string>
    <string
        name="previous">Previous\n Chapter
    </string>
    <string
        name="introTitle">Introduction: This is Your Story. Tell it.
    </string>
    <string
        name="chapter1Title">Chapter 1: Character Creation
    </string>
    <string
        name="chapter2Title">Chapter 2: Actions and Attributes
    </string>
    <string
        name="chapter3Title">Chapter 3: Banes and Boons
    </string>
    <string
        name="chapter4Title">Chapter 4: Feats
    </string>
    <string
        name="chapter5Title">Chapter 5: Perks and Flaws
    </string>
    <string
        name="chapter6Title">Chapter 6: Wealth and Equipment
    </string>
    <string
        name="chapter7Title">Chapter 7: Combat
    </string>
    <string
        name="chapter8Title">Chapter 8: Running the Game
    </string>
    <string
        name="chapter9Title">Chapter 9: Special Equipment
    </string>
    <string
        name="whatDefinesOpenLegend">What Defines Open Legend?
    </string>
    <string
        name="theActionRoll">The Core Mechanic: The Action Roll
    </string>
    <string
        name="treasures"><b>Greater Treasures Lie Within</b>
    </string>
    <string
        name="intro_Description1">Why Open Legend?
    </string>
    <string
        name="intro_Description2">If you have played roleplaying games in the past, you may be wondering What makes Open Legend worth my time? What makes it different?
The secret’s in the title: Open. Everything about the game has been built to open up the doors of possibility so that every table tells a legend worth telling. Here are a few of the possibilities that Open Legend offers.
    </string>
    <string
        name="intro_Description3"><b>Open Source.</b> That’s right. The unabridged core rules are available on the website and the Open Legend Community License allows for publication of both commercial as well as non-commercial derivative works using the system. We know the public will love the game as much as we do, and we hope they’ll spread the love by publishing their own adventures, rules supplements, and more.
    </string>
    <string
        name="intro_Description4"><b>Open Dice.</b> In Open Legend, dice explode! That means that whenever ANY die rolls maximum, you get to reroll it and add the new roll to your total, ad infinitum. The volatile nature of dice rolling makes every roll count, and each session of Open Legend is full of tense moments when the tides can turn at a moment’s notice, for better or worse.
    </string>
    <string
        name="intro_Description5"><b>Open Legend.</b> You get to tell the story that you want to tell, with the characters you want to play. You aren’t tied down to specific class, archetype, or race combinations. The only limit is your imagination (and maybe the GM’s veto power). Rather than a list of set classes with a menu of skills to pick from, you start the game with attribute points that you spend as you wish to give your character the powers they need.
    </string>
    <string
        name="intro_Description6">Welcome to Open Legend, a tabletop roleplaying game (or RPG) in which the players take the part of mighty heroes and wicked villains in order to tell stories of epic proportion. As in the vignettes above, every game of Open Legend revolves around intrepid characters performing heroic deeds. They will fight mythic beasts, outsmart cunning foes, break ancient curses, crack baffling cases, discover untold treasures, and more.
    </string>
    <string
        name="intro_Description7">If you have never played a roleplaying game before, you can think of it as a movie in which the actors make up the script (and even much of the plot) as the movie is being shot. One player, called the <b>Game Master</b> (or GM), acts as producer, director, and writer. The GM establishes the setting, creates the antagonists, and develops enough plot to get the other players started. The GM also acts out the part of the villains and neutral characters in the story.
    </string>
    <string
        name="intro_Description8">The rest of the players take the role of <b>Player Characters</b> (or PCs). The PCs are the protagonists of the story. In a high fantasy setting, one PC might be a dwarven warrior with a lust for gems, another an immortal elven wizard whose only desire is knowledge, and still another a half-angelic priest who travels the world in order to inspire others to act justly. In another game of Open Legend, the players might star as a rag tag crew of space pirates living from score to score on their barely functioning merchant class starship. All the common tropes could make an appearance: the reckless pilot, the brash captain with a troubled past, the hired gun, the stowaway, and the engineer who gets along with the ship better than with the crew.
    </string>
    <string
        name="password">Password
    </string>
    <string
        name="e_mail">Email
    </string>
    <string
        name="tag">Welcome to the world of OpenLegendRPG! Please Create an account or login.
    </string>
    <string
        name="register">Register
    </string>
    <string
        name="re_type_password">Re-type Password
    </string>
    <string
        name="your_name">Username
    </string>
</resources>