<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:fillViewport="true"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/ch4_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chapter4_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/corerules"
                    android:duplicateParentState="false"
                    android:text="@string/chapter4Title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/Buttons"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/PreviousButton"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:text="@string/previous" />

                    <Button
                        android:id="@+id/TableButton"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:text="@string/table" />

                    <Button
                        android:id="@+id/NextButton"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:text="@string/next" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
