<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/paper_bg">

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/PreviousButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_700"
            android:text="@string/previous" />

        <Button
            android:id="@+id/TableButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/purple_700"
            android:layout_marginTop="0dp"
            android:layout_centerInParent="true"
            android:text="@string/table" />

        <Button
            android:id="@+id/NextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_700"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:fillViewport="true"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/ch9_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chapter9_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/corerules"
                    android:duplicateParentState="false"
                    android:text="@string/chapter9Title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>