<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="2.1"
        android:scaleY="2.1"
        android:scrollX="60dp"
        android:alpha="0.85"
        app:srcCompat="@drawable/paper_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:fillViewport="true"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/ch2_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chapter2_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/corerules"
                    android:duplicateParentState="false"
                    android:text="@string/chapter2Title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/Buttons"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/PreviousButton"
                        android:layout_width="137dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="0dp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/purple_700"
                        android:layout_alignParentBottom="true"
                        android:text="@string/previous" />

                    <Button
                        android:id="@+id/TableButton"
                        android:layout_width="137dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="0dp"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:textColor="@color/purple_700"
                        android:layout_alignParentBottom="true"
                        android:text="@string/table" />

                    <Button
                        android:id="@+id/NextButton"
                        android:layout_width="137dp"
                        android:layout_height="60dp"
                        android:textAlignment="center"
                        android:background="@android:color/transparent"
                        android:textColor="@color/purple_700"
                        android:layout_alignParentBottom="true"
                        android:text="@string/next" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>